PLY mini-lisp/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> exp
Rule 1     exp -> atom
Rule 2     exp -> quoted_list
Rule 3     exp -> call
Rule 4     exp -> LPAREN let call RPAREN
Rule 5     exp -> LPAREN let RPAREN
Rule 6     quoted_list -> QUOTE list
Rule 7     list -> LPAREN items RPAREN
Rule 8     items -> item items
Rule 9     items -> empty
Rule 10    empty -> <empty>
Rule 11    item -> atom
Rule 12    item -> quoted_list
Rule 13    item -> call
Rule 14    item -> empty
Rule 15    call -> LPAREN SIMB items RPAREN
Rule 16    let -> LET LPAREN SIMB NUM RPAREN
Rule 17    atom -> SIMB
Rule 18    atom -> bool
Rule 19    atom -> NUM
Rule 20    atom -> TEXT
Rule 21    atom -> <empty>
Rule 22    bool -> TRUE
Rule 23    bool -> FALSE
Rule 24    atom -> NIL

Terminals, with rules where they appear

FALSE                : 23
LET                  : 16
LPAREN               : 4 5 7 15 16
NIL                  : 24
NUM                  : 16 19
QUOTE                : 6
RPAREN               : 4 5 7 15 16
SIMB                 : 15 16 17
TEXT                 : 20
TRUE                 : 22
error                : 

Nonterminals, with rules where they appear

atom                 : 1 11
bool                 : 18
call                 : 3 4 13
empty                : 9 14
exp                  : 0
item                 : 8
items                : 7 8 15
let                  : 4 5
list                 : 6
quoted_list          : 2 12

Parsing method: LALR

state 0

    (0) S' -> . exp
    (1) exp -> . atom
    (2) exp -> . quoted_list
    (3) exp -> . call
    (4) exp -> . LPAREN let call RPAREN
    (5) exp -> . LPAREN let RPAREN
    (17) atom -> . SIMB
    (18) atom -> . bool
    (19) atom -> . NUM
    (20) atom -> . TEXT
    (21) atom -> .
    (24) atom -> . NIL
    (6) quoted_list -> . QUOTE list
    (15) call -> . LPAREN SIMB items RPAREN
    (22) bool -> . TRUE
    (23) bool -> . FALSE

    LPAREN          shift and go to state 9
    SIMB            shift and go to state 6
    NUM             shift and go to state 7
    TEXT            shift and go to state 4
    $end            reduce using rule 21 (atom -> .)
    NIL             shift and go to state 2
    QUOTE           shift and go to state 8
    TRUE            shift and go to state 13
    FALSE           shift and go to state 5

    call                           shift and go to state 11
    quoted_list                    shift and go to state 3
    exp                            shift and go to state 1
    atom                           shift and go to state 10
    bool                           shift and go to state 12

state 1

    (0) S' -> exp .



state 2

    (24) atom -> NIL .

    SIMB            reduce using rule 24 (atom -> NIL .)
    NUM             reduce using rule 24 (atom -> NIL .)
    TEXT            reduce using rule 24 (atom -> NIL .)
    NIL             reduce using rule 24 (atom -> NIL .)
    QUOTE           reduce using rule 24 (atom -> NIL .)
    LPAREN          reduce using rule 24 (atom -> NIL .)
    TRUE            reduce using rule 24 (atom -> NIL .)
    FALSE           reduce using rule 24 (atom -> NIL .)
    RPAREN          reduce using rule 24 (atom -> NIL .)
    $end            reduce using rule 24 (atom -> NIL .)


state 3

    (2) exp -> quoted_list .

    $end            reduce using rule 2 (exp -> quoted_list .)


state 4

    (20) atom -> TEXT .

    SIMB            reduce using rule 20 (atom -> TEXT .)
    NUM             reduce using rule 20 (atom -> TEXT .)
    TEXT            reduce using rule 20 (atom -> TEXT .)
    NIL             reduce using rule 20 (atom -> TEXT .)
    QUOTE           reduce using rule 20 (atom -> TEXT .)
    LPAREN          reduce using rule 20 (atom -> TEXT .)
    TRUE            reduce using rule 20 (atom -> TEXT .)
    FALSE           reduce using rule 20 (atom -> TEXT .)
    RPAREN          reduce using rule 20 (atom -> TEXT .)
    $end            reduce using rule 20 (atom -> TEXT .)


state 5

    (23) bool -> FALSE .

    SIMB            reduce using rule 23 (bool -> FALSE .)
    NUM             reduce using rule 23 (bool -> FALSE .)
    TEXT            reduce using rule 23 (bool -> FALSE .)
    NIL             reduce using rule 23 (bool -> FALSE .)
    QUOTE           reduce using rule 23 (bool -> FALSE .)
    LPAREN          reduce using rule 23 (bool -> FALSE .)
    TRUE            reduce using rule 23 (bool -> FALSE .)
    FALSE           reduce using rule 23 (bool -> FALSE .)
    RPAREN          reduce using rule 23 (bool -> FALSE .)
    $end            reduce using rule 23 (bool -> FALSE .)


state 6

    (17) atom -> SIMB .

    SIMB            reduce using rule 17 (atom -> SIMB .)
    NUM             reduce using rule 17 (atom -> SIMB .)
    TEXT            reduce using rule 17 (atom -> SIMB .)
    NIL             reduce using rule 17 (atom -> SIMB .)
    QUOTE           reduce using rule 17 (atom -> SIMB .)
    LPAREN          reduce using rule 17 (atom -> SIMB .)
    TRUE            reduce using rule 17 (atom -> SIMB .)
    FALSE           reduce using rule 17 (atom -> SIMB .)
    RPAREN          reduce using rule 17 (atom -> SIMB .)
    $end            reduce using rule 17 (atom -> SIMB .)


state 7

    (19) atom -> NUM .

    SIMB            reduce using rule 19 (atom -> NUM .)
    NUM             reduce using rule 19 (atom -> NUM .)
    TEXT            reduce using rule 19 (atom -> NUM .)
    NIL             reduce using rule 19 (atom -> NUM .)
    QUOTE           reduce using rule 19 (atom -> NUM .)
    LPAREN          reduce using rule 19 (atom -> NUM .)
    TRUE            reduce using rule 19 (atom -> NUM .)
    FALSE           reduce using rule 19 (atom -> NUM .)
    RPAREN          reduce using rule 19 (atom -> NUM .)
    $end            reduce using rule 19 (atom -> NUM .)


state 8

    (6) quoted_list -> QUOTE . list
    (7) list -> . LPAREN items RPAREN

    LPAREN          shift and go to state 15

    list                           shift and go to state 14

state 9

    (4) exp -> LPAREN . let call RPAREN
    (5) exp -> LPAREN . let RPAREN
    (15) call -> LPAREN . SIMB items RPAREN
    (16) let -> . LET LPAREN SIMB NUM RPAREN

    SIMB            shift and go to state 17
    LET             shift and go to state 16

    let                            shift and go to state 18

state 10

    (1) exp -> atom .

    $end            reduce using rule 1 (exp -> atom .)


state 11

    (3) exp -> call .

    $end            reduce using rule 3 (exp -> call .)


state 12

    (18) atom -> bool .

    SIMB            reduce using rule 18 (atom -> bool .)
    NUM             reduce using rule 18 (atom -> bool .)
    TEXT            reduce using rule 18 (atom -> bool .)
    NIL             reduce using rule 18 (atom -> bool .)
    QUOTE           reduce using rule 18 (atom -> bool .)
    LPAREN          reduce using rule 18 (atom -> bool .)
    TRUE            reduce using rule 18 (atom -> bool .)
    FALSE           reduce using rule 18 (atom -> bool .)
    RPAREN          reduce using rule 18 (atom -> bool .)
    $end            reduce using rule 18 (atom -> bool .)


state 13

    (22) bool -> TRUE .

    SIMB            reduce using rule 22 (bool -> TRUE .)
    NUM             reduce using rule 22 (bool -> TRUE .)
    TEXT            reduce using rule 22 (bool -> TRUE .)
    NIL             reduce using rule 22 (bool -> TRUE .)
    QUOTE           reduce using rule 22 (bool -> TRUE .)
    LPAREN          reduce using rule 22 (bool -> TRUE .)
    TRUE            reduce using rule 22 (bool -> TRUE .)
    FALSE           reduce using rule 22 (bool -> TRUE .)
    RPAREN          reduce using rule 22 (bool -> TRUE .)
    $end            reduce using rule 22 (bool -> TRUE .)


state 14

    (6) quoted_list -> QUOTE list .

    $end            reduce using rule 6 (quoted_list -> QUOTE list .)
    SIMB            reduce using rule 6 (quoted_list -> QUOTE list .)
    NUM             reduce using rule 6 (quoted_list -> QUOTE list .)
    TEXT            reduce using rule 6 (quoted_list -> QUOTE list .)
    NIL             reduce using rule 6 (quoted_list -> QUOTE list .)
    QUOTE           reduce using rule 6 (quoted_list -> QUOTE list .)
    LPAREN          reduce using rule 6 (quoted_list -> QUOTE list .)
    TRUE            reduce using rule 6 (quoted_list -> QUOTE list .)
    FALSE           reduce using rule 6 (quoted_list -> QUOTE list .)
    RPAREN          reduce using rule 6 (quoted_list -> QUOTE list .)


state 15

    (7) list -> LPAREN . items RPAREN
    (8) items -> . item items
    (9) items -> . empty
    (11) item -> . atom
    (12) item -> . quoted_list
    (13) item -> . call
    (14) item -> . empty
    (10) empty -> .
    (17) atom -> . SIMB
    (18) atom -> . bool
    (19) atom -> . NUM
    (20) atom -> . TEXT
    (21) atom -> .
    (24) atom -> . NIL
    (6) quoted_list -> . QUOTE list
    (15) call -> . LPAREN SIMB items RPAREN
    (22) bool -> . TRUE
    (23) bool -> . FALSE

  ! shift/reduce conflict for SIMB resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! shift/reduce conflict for SIMB resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! reduce/reduce conflict for NIL resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for QUOTE resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for LPAREN resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for TRUE resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for FALSE resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for RPAREN resolved using rule 10 (empty -> .)
  ! shift/reduce conflict for NIL resolved as shift
  ! shift/reduce conflict for QUOTE resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    RPAREN          reduce using rule 10 (empty -> .)
    SIMB            shift and go to state 6
    NUM             shift and go to state 7
    TEXT            shift and go to state 4
    NIL             shift and go to state 2
    QUOTE           shift and go to state 8
    LPAREN          shift and go to state 23
    TRUE            shift and go to state 13
    FALSE           shift and go to state 5

  ! SIMB            [ reduce using rule 10 (empty -> .) ]
  ! NUM             [ reduce using rule 10 (empty -> .) ]
  ! TEXT            [ reduce using rule 10 (empty -> .) ]
  ! NIL             [ reduce using rule 10 (empty -> .) ]
  ! QUOTE           [ reduce using rule 10 (empty -> .) ]
  ! LPAREN          [ reduce using rule 10 (empty -> .) ]
  ! TRUE            [ reduce using rule 10 (empty -> .) ]
  ! FALSE           [ reduce using rule 10 (empty -> .) ]
  ! SIMB            [ reduce using rule 21 (atom -> .) ]
  ! NUM             [ reduce using rule 21 (atom -> .) ]
  ! TEXT            [ reduce using rule 21 (atom -> .) ]
  ! NIL             [ reduce using rule 21 (atom -> .) ]
  ! QUOTE           [ reduce using rule 21 (atom -> .) ]
  ! LPAREN          [ reduce using rule 21 (atom -> .) ]
  ! TRUE            [ reduce using rule 21 (atom -> .) ]
  ! FALSE           [ reduce using rule 21 (atom -> .) ]
  ! RPAREN          [ reduce using rule 21 (atom -> .) ]

    quoted_list                    shift and go to state 19
    items                          shift and go to state 20
    item                           shift and go to state 21
    call                           shift and go to state 22
    atom                           shift and go to state 24
    bool                           shift and go to state 12
    empty                          shift and go to state 25

state 16

    (16) let -> LET . LPAREN SIMB NUM RPAREN

    LPAREN          shift and go to state 26


state 17

    (15) call -> LPAREN SIMB . items RPAREN
    (8) items -> . item items
    (9) items -> . empty
    (11) item -> . atom
    (12) item -> . quoted_list
    (13) item -> . call
    (14) item -> . empty
    (10) empty -> .
    (17) atom -> . SIMB
    (18) atom -> . bool
    (19) atom -> . NUM
    (20) atom -> . TEXT
    (21) atom -> .
    (24) atom -> . NIL
    (6) quoted_list -> . QUOTE list
    (15) call -> . LPAREN SIMB items RPAREN
    (22) bool -> . TRUE
    (23) bool -> . FALSE

  ! shift/reduce conflict for SIMB resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! shift/reduce conflict for SIMB resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! reduce/reduce conflict for NIL resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for QUOTE resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for LPAREN resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for TRUE resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for FALSE resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for RPAREN resolved using rule 10 (empty -> .)
  ! shift/reduce conflict for NIL resolved as shift
  ! shift/reduce conflict for QUOTE resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    RPAREN          reduce using rule 10 (empty -> .)
    SIMB            shift and go to state 6
    NUM             shift and go to state 7
    TEXT            shift and go to state 4
    NIL             shift and go to state 2
    QUOTE           shift and go to state 8
    LPAREN          shift and go to state 23
    TRUE            shift and go to state 13
    FALSE           shift and go to state 5

  ! SIMB            [ reduce using rule 10 (empty -> .) ]
  ! NUM             [ reduce using rule 10 (empty -> .) ]
  ! TEXT            [ reduce using rule 10 (empty -> .) ]
  ! NIL             [ reduce using rule 10 (empty -> .) ]
  ! QUOTE           [ reduce using rule 10 (empty -> .) ]
  ! LPAREN          [ reduce using rule 10 (empty -> .) ]
  ! TRUE            [ reduce using rule 10 (empty -> .) ]
  ! FALSE           [ reduce using rule 10 (empty -> .) ]
  ! SIMB            [ reduce using rule 21 (atom -> .) ]
  ! NUM             [ reduce using rule 21 (atom -> .) ]
  ! TEXT            [ reduce using rule 21 (atom -> .) ]
  ! NIL             [ reduce using rule 21 (atom -> .) ]
  ! QUOTE           [ reduce using rule 21 (atom -> .) ]
  ! LPAREN          [ reduce using rule 21 (atom -> .) ]
  ! TRUE            [ reduce using rule 21 (atom -> .) ]
  ! FALSE           [ reduce using rule 21 (atom -> .) ]
  ! RPAREN          [ reduce using rule 21 (atom -> .) ]

    quoted_list                    shift and go to state 19
    items                          shift and go to state 27
    item                           shift and go to state 21
    call                           shift and go to state 22
    atom                           shift and go to state 24
    bool                           shift and go to state 12
    empty                          shift and go to state 25

state 18

    (4) exp -> LPAREN let . call RPAREN
    (5) exp -> LPAREN let . RPAREN
    (15) call -> . LPAREN SIMB items RPAREN

    RPAREN          shift and go to state 28
    LPAREN          shift and go to state 23

    call                           shift and go to state 29

state 19

    (12) item -> quoted_list .

    SIMB            reduce using rule 12 (item -> quoted_list .)
    NUM             reduce using rule 12 (item -> quoted_list .)
    TEXT            reduce using rule 12 (item -> quoted_list .)
    NIL             reduce using rule 12 (item -> quoted_list .)
    QUOTE           reduce using rule 12 (item -> quoted_list .)
    LPAREN          reduce using rule 12 (item -> quoted_list .)
    TRUE            reduce using rule 12 (item -> quoted_list .)
    FALSE           reduce using rule 12 (item -> quoted_list .)
    RPAREN          reduce using rule 12 (item -> quoted_list .)


state 20

    (7) list -> LPAREN items . RPAREN

    RPAREN          shift and go to state 30


state 21

    (8) items -> item . items
    (8) items -> . item items
    (9) items -> . empty
    (11) item -> . atom
    (12) item -> . quoted_list
    (13) item -> . call
    (14) item -> . empty
    (10) empty -> .
    (17) atom -> . SIMB
    (18) atom -> . bool
    (19) atom -> . NUM
    (20) atom -> . TEXT
    (21) atom -> .
    (24) atom -> . NIL
    (6) quoted_list -> . QUOTE list
    (15) call -> . LPAREN SIMB items RPAREN
    (22) bool -> . TRUE
    (23) bool -> . FALSE

  ! shift/reduce conflict for SIMB resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! shift/reduce conflict for SIMB resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! reduce/reduce conflict for NIL resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for QUOTE resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for LPAREN resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for TRUE resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for FALSE resolved using rule 10 (empty -> .)
  ! reduce/reduce conflict for RPAREN resolved using rule 10 (empty -> .)
  ! shift/reduce conflict for NIL resolved as shift
  ! shift/reduce conflict for QUOTE resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    RPAREN          reduce using rule 10 (empty -> .)
    SIMB            shift and go to state 6
    NUM             shift and go to state 7
    TEXT            shift and go to state 4
    NIL             shift and go to state 2
    QUOTE           shift and go to state 8
    LPAREN          shift and go to state 23
    TRUE            shift and go to state 13
    FALSE           shift and go to state 5

  ! SIMB            [ reduce using rule 10 (empty -> .) ]
  ! NUM             [ reduce using rule 10 (empty -> .) ]
  ! TEXT            [ reduce using rule 10 (empty -> .) ]
  ! NIL             [ reduce using rule 10 (empty -> .) ]
  ! QUOTE           [ reduce using rule 10 (empty -> .) ]
  ! LPAREN          [ reduce using rule 10 (empty -> .) ]
  ! TRUE            [ reduce using rule 10 (empty -> .) ]
  ! FALSE           [ reduce using rule 10 (empty -> .) ]
  ! SIMB            [ reduce using rule 21 (atom -> .) ]
  ! NUM             [ reduce using rule 21 (atom -> .) ]
  ! TEXT            [ reduce using rule 21 (atom -> .) ]
  ! NIL             [ reduce using rule 21 (atom -> .) ]
  ! QUOTE           [ reduce using rule 21 (atom -> .) ]
  ! LPAREN          [ reduce using rule 21 (atom -> .) ]
  ! TRUE            [ reduce using rule 21 (atom -> .) ]
  ! FALSE           [ reduce using rule 21 (atom -> .) ]
  ! RPAREN          [ reduce using rule 21 (atom -> .) ]

    quoted_list                    shift and go to state 19
    items                          shift and go to state 31
    item                           shift and go to state 21
    call                           shift and go to state 22
    atom                           shift and go to state 24
    bool                           shift and go to state 12
    empty                          shift and go to state 25

state 22

    (13) item -> call .

    SIMB            reduce using rule 13 (item -> call .)
    NUM             reduce using rule 13 (item -> call .)
    TEXT            reduce using rule 13 (item -> call .)
    NIL             reduce using rule 13 (item -> call .)
    QUOTE           reduce using rule 13 (item -> call .)
    LPAREN          reduce using rule 13 (item -> call .)
    TRUE            reduce using rule 13 (item -> call .)
    FALSE           reduce using rule 13 (item -> call .)
    RPAREN          reduce using rule 13 (item -> call .)


state 23

    (15) call -> LPAREN . SIMB items RPAREN

    SIMB            shift and go to state 17


state 24

    (11) item -> atom .

    SIMB            reduce using rule 11 (item -> atom .)
    NUM             reduce using rule 11 (item -> atom .)
    TEXT            reduce using rule 11 (item -> atom .)
    NIL             reduce using rule 11 (item -> atom .)
    QUOTE           reduce using rule 11 (item -> atom .)
    LPAREN          reduce using rule 11 (item -> atom .)
    TRUE            reduce using rule 11 (item -> atom .)
    FALSE           reduce using rule 11 (item -> atom .)
    RPAREN          reduce using rule 11 (item -> atom .)


state 25

    (9) items -> empty .
    (14) item -> empty .

  ! reduce/reduce conflict for RPAREN resolved using rule 9 (items -> empty .)
    RPAREN          reduce using rule 9 (items -> empty .)
    SIMB            reduce using rule 14 (item -> empty .)
    NUM             reduce using rule 14 (item -> empty .)
    TEXT            reduce using rule 14 (item -> empty .)
    NIL             reduce using rule 14 (item -> empty .)
    QUOTE           reduce using rule 14 (item -> empty .)
    LPAREN          reduce using rule 14 (item -> empty .)
    TRUE            reduce using rule 14 (item -> empty .)
    FALSE           reduce using rule 14 (item -> empty .)

  ! RPAREN          [ reduce using rule 14 (item -> empty .) ]


state 26

    (16) let -> LET LPAREN . SIMB NUM RPAREN

    SIMB            shift and go to state 32


state 27

    (15) call -> LPAREN SIMB items . RPAREN

    RPAREN          shift and go to state 33


state 28

    (5) exp -> LPAREN let RPAREN .

    $end            reduce using rule 5 (exp -> LPAREN let RPAREN .)


state 29

    (4) exp -> LPAREN let call . RPAREN

    RPAREN          shift and go to state 34


state 30

    (7) list -> LPAREN items RPAREN .

    $end            reduce using rule 7 (list -> LPAREN items RPAREN .)
    SIMB            reduce using rule 7 (list -> LPAREN items RPAREN .)
    NUM             reduce using rule 7 (list -> LPAREN items RPAREN .)
    TEXT            reduce using rule 7 (list -> LPAREN items RPAREN .)
    NIL             reduce using rule 7 (list -> LPAREN items RPAREN .)
    QUOTE           reduce using rule 7 (list -> LPAREN items RPAREN .)
    LPAREN          reduce using rule 7 (list -> LPAREN items RPAREN .)
    TRUE            reduce using rule 7 (list -> LPAREN items RPAREN .)
    FALSE           reduce using rule 7 (list -> LPAREN items RPAREN .)
    RPAREN          reduce using rule 7 (list -> LPAREN items RPAREN .)


state 31

    (8) items -> item items .

    RPAREN          reduce using rule 8 (items -> item items .)


state 32

    (16) let -> LET LPAREN SIMB . NUM RPAREN

    NUM             shift and go to state 35


state 33

    (15) call -> LPAREN SIMB items RPAREN .

    SIMB            reduce using rule 15 (call -> LPAREN SIMB items RPAREN .)
    NUM             reduce using rule 15 (call -> LPAREN SIMB items RPAREN .)
    TEXT            reduce using rule 15 (call -> LPAREN SIMB items RPAREN .)
    NIL             reduce using rule 15 (call -> LPAREN SIMB items RPAREN .)
    QUOTE           reduce using rule 15 (call -> LPAREN SIMB items RPAREN .)
    LPAREN          reduce using rule 15 (call -> LPAREN SIMB items RPAREN .)
    TRUE            reduce using rule 15 (call -> LPAREN SIMB items RPAREN .)
    FALSE           reduce using rule 15 (call -> LPAREN SIMB items RPAREN .)
    RPAREN          reduce using rule 15 (call -> LPAREN SIMB items RPAREN .)
    $end            reduce using rule 15 (call -> LPAREN SIMB items RPAREN .)


state 34

    (4) exp -> LPAREN let call RPAREN .

    $end            reduce using rule 4 (exp -> LPAREN let call RPAREN .)


state 35

    (16) let -> LET LPAREN SIMB NUM . RPAREN

    RPAREN          shift and go to state 36


state 36

    (16) let -> LET LPAREN SIMB NUM RPAREN .

    RPAREN          reduce using rule 16 (let -> LET LPAREN SIMB NUM RPAREN .)
    LPAREN          reduce using rule 16 (let -> LET LPAREN SIMB NUM RPAREN .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for SIMB in state 15 resolved as shift
WARNING: shift/reduce conflict for NUM in state 15 resolved as shift
WARNING: shift/reduce conflict for TEXT in state 15 resolved as shift
WARNING: shift/reduce conflict for SIMB in state 15 resolved as shift
WARNING: shift/reduce conflict for NUM in state 15 resolved as shift
WARNING: shift/reduce conflict for TEXT in state 15 resolved as shift
WARNING: shift/reduce conflict for NIL in state 15 resolved as shift
WARNING: shift/reduce conflict for QUOTE in state 15 resolved as shift
WARNING: shift/reduce conflict for LPAREN in state 15 resolved as shift
WARNING: shift/reduce conflict for TRUE in state 15 resolved as shift
WARNING: shift/reduce conflict for FALSE in state 15 resolved as shift
WARNING: shift/reduce conflict for SIMB in state 17 resolved as shift
WARNING: shift/reduce conflict for NUM in state 17 resolved as shift
WARNING: shift/reduce conflict for TEXT in state 17 resolved as shift
WARNING: shift/reduce conflict for SIMB in state 17 resolved as shift
WARNING: shift/reduce conflict for NUM in state 17 resolved as shift
WARNING: shift/reduce conflict for TEXT in state 17 resolved as shift
WARNING: shift/reduce conflict for NIL in state 17 resolved as shift
WARNING: shift/reduce conflict for QUOTE in state 17 resolved as shift
WARNING: shift/reduce conflict for LPAREN in state 17 resolved as shift
WARNING: shift/reduce conflict for TRUE in state 17 resolved as shift
WARNING: shift/reduce conflict for FALSE in state 17 resolved as shift
WARNING: shift/reduce conflict for SIMB in state 21 resolved as shift
WARNING: shift/reduce conflict for NUM in state 21 resolved as shift
WARNING: shift/reduce conflict for TEXT in state 21 resolved as shift
WARNING: shift/reduce conflict for SIMB in state 21 resolved as shift
WARNING: shift/reduce conflict for NUM in state 21 resolved as shift
WARNING: shift/reduce conflict for TEXT in state 21 resolved as shift
WARNING: shift/reduce conflict for NIL in state 21 resolved as shift
WARNING: shift/reduce conflict for QUOTE in state 21 resolved as shift
WARNING: shift/reduce conflict for LPAREN in state 21 resolved as shift
WARNING: shift/reduce conflict for TRUE in state 21 resolved as shift
WARNING: shift/reduce conflict for FALSE in state 21 resolved as shift
WARNING: reduce/reduce conflict in state 15 resolved using rule (empty -> <empty>)
WARNING: rejected rule (atom -> <empty>) in state 15
WARNING: reduce/reduce conflict in state 17 resolved using rule (empty -> <empty>)
WARNING: rejected rule (atom -> <empty>) in state 17
WARNING: reduce/reduce conflict in state 21 resolved using rule (empty -> <empty>)
WARNING: rejected rule (atom -> <empty>) in state 21
WARNING: reduce/reduce conflict in state 25 resolved using rule (items -> empty)
WARNING: rejected rule (item -> empty) in state 25
